python test cases part1